--- a/salle.html
+++ b/salle.html
@@ -1,141 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <!-- Inclusion des headers nécessaires au wrapper, au footer et au bon fonctionnement de la page-->
+    <!-- Meta tags and Bootstrap CSS -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <title>Notre salle OMNES sports</title>
-    <link rel="stylesheet" type="text/css" href="toutParcourir.css">
-    <link rel="stylesheet" href="connexion.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="accueil.css" />
+    <title>SPORTIFY</title>
 </head>
 
 <body>
-    <!-- Création du wrapper -->
-    <div class="wrapper">
-        <div class="search-container form-inline my-2 my-lg-0 ml-auto">
-            <input type="search" id="search-input" placeholder="Taper pour Rechercher" class="form-control mr-sm-2">
-            <button id="search-button" class="btn my-2 my-sm-0" type="button">Rechercher</button>
-        </div>
-        <script src="https://kit.fontawesome.com/c0bfb983cf.js" crossorigin="anonymous"></script>
-        <div class="nav-item">
-            <!-- Logo du site qui permet de retourner rapidement à l'accueil quand on clique dessus -->
-            <a href="accueil.html">
-                <img src="SportifyV2.png" height="80px" width="70px" />
-            </a>
-        </div>
-        <div id="nav-latteral" class="nav-latteral">
-            <!-- Création de la barre latérale permettant d'avoir accès à l'accueil, à tout parcourir, au menu compte et au menu rendez-vous -->
-            <div id="nav-close" class="nav-button">
-                <ion-icon name="close"></ion-icon>
-            </div>
-            <div class="nav-links">
-                <a href="accueil.html">
-                    <div class="nav-link">
-                        <ion-icon name="home"></ion-icon>
-                        Accueil
-                    </div>
-                </a>
-                <a href="connexion.html">
-                    <div class="nav-link">
-                        <ion-icon name="person"></ion-icon>
-                        Compte
-                    </div>
-                </a>
-                <a href="toutParcourir.html">
-                    <div class="nav-link">
-                        <ion-icon name="book"></ion-icon>
-                        Tout Parcourir
-                    </div>
-                </a>
-                <a href="rdv.html">
-                    <div class="nav-link">
-                        <ion-icon name="time"></ion-icon>
-                        Rendez-Vous
-                    </div>
-                </a>
+    <!-- Navigation bar -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <a class="navbar-brand" href="accueil.html">
+            <img src="images/logo.png" height="60" alt="Sportify Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="accueil.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="connexion.html">Compte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="toutParcourir.html">Tout Parcourir</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rdv.html">Rendez-Vous</a>
+                </li>
+            </ul>
+            <div class="search-container form-inline my-2 my-lg-0 ml-auto">
+                <input type="search" id="search-input" placeholder="Taper pour Rechercher" class="form-control mr-sm-2">
+                <button id="search-button" class="btn my-2 my-sm-0" type="button">Rechercher</button>
             </div>
         </div>
-        <div id="nav-wrapper"></div>
-        <nav>
-            <div id="nav-open" class="nav-button">
-                <ion-icon name="reorder-three"></ion-icon>
-            </div>
-        </nav>
-        <main>
-            <h1>Notre salle Omnes Sports</h1><br><br>
-            <center>
-                <div class="salle-container">
-                    <div class="image-container">
-                        <img src="Salle.jpg" alt="Image de la salle" class="salle-image">
-                    </div>
-                    <div class="info-container">
-                        <p><strong>P-346</strong></p>
-                        <p><strong>Téléphone: 01 44 87 62 11</strong></p>
-                        <p><strong>salle.sports@omnessports.fr</strong></p>
-                        <p>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-microsoft-teams" viewBox="0 0 16 16">
-                                <path
-                                    d="M9.186 4.797a2.42 2.42 0 1 0-2.86-2.448h1.178c.929 0 1.682.753 1.682 1.682v.766Zm-4.295 7.738h2.613c.929 0 1.682-.753 1.682-1.682V5.58h2.783a.7.7 0 0 1 .682.716v4.294a4.197 4.197 0 0 1-4.093 4.293c-1.618-.04-3-.99-3.667-2.35Zm10.737-9.372a1.674 1.674 0 1 1-3.349 0 1.674 1.674 0 0 1 3.349 0Zm-2.238 9.488c-.04 0-.08 0-.12-.002a5.19 5.19 0 0 0 .381-2.07V6.306a1.692 1.692 0 0 0-.15-.725h1.792c.39 0 .707.317.707.707v3.765a2.598 2.598 0 0 1-2.598 2.598h-.013Z" />
-                                <path
-                                    d="M.682 3.349h6.822c.377 0 .682.305.682.682v6.822a.682.682 0 0 1-.682.682H.682A.682.682 0 0 1 0 10.853V4.03c0-.377.305-.682.682-.682Zm5.206 2.596v-.72h-3.59v.72h1.357V9.66h.87V5.945h1.363Z" />
-                            </svg> Lien invitation Teams pour chat avec reponsable de la salle : <a
-                                href="https://teams.live.com/l/invite/FEAVvMSHHb_LIb31gE">https://teams.live.com/l/invite/FEAVvMSHHb_LIb31gE</a>
-                        </p>
-                        <p>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-microsoft-teams" viewBox="0 0 16 16">
-                                <path
-                                    d="M9.186 4.797a2.42 2.42 0 1 0-2.86-2.448h1.178c.929 0 1.682.753 1.682 1.682v.766Zm-4.295 7.738h2.613c.929 0 1.682-.753 1.682-1.682V5.58h2.783a.7.7 0 0 1 .682.716v4.294a4.197 4.197 0 0 1-4.093 4.293c-1.618-.04-3-.99-3.667-2.35Zm10.737-9.372a1.674 1.674 0 1 1-3.349 0 1.674 1.674 0 0 1 3.349 0Zm-2.238 9.488c-.04 0-.08 0-.12-.002a5.19 5.19 0 0 0 .381-2.07V6.306a1.692 1.692 0 0 0-.15-.725h1.792c.39 0 .707.317.707.707v3.765a2.598 2.598 0 0 1-2.598 2.598h-.013Z" />
-                                <path
-                                    d="M.682 3.349h6.822c.377 0 .682.305.682.682v6.822a.682.682 0 0 1-.682.682H.682A.682.682 0 0 1 0 10.853V4.03c0-.377.305-.682.682-.682Zm5.206 2.596v-.72h-3.59v.72h1.357V9.66h.87V5.945h1.363Z" />
-                            </svg> Lien visioconférence avec responsable de la salle : <a
-                                href="https://teams.live.com/meet/9424220957824">https://teams.live.com/meet/9424220957824</a>
-                        </p>
-                    </div>
+    </nav>
+
+    <main>
+        <br><br><br><br>
+        <h1>La salle de sport Omnes éducation</h1><br><br>
+        <center>
+            <div class="salle-container">
+                <div class="image-container">
+                    <img src="images/salle1.jpg" height=200px alt="Salle de sport Omnes" class="salle-image">
                 </div>
-
-
-                <div>
-                    <button class="button" onclick="window.location.href='services.html'">Nos services</button>
+                <div class="info-container">
+                    <p><strong>P-416</strong></p>
+                    <p><strong>Téléphone: 01 44 87 62 11</strong></p>
+                    <p><strong>salle.sports@omnessports.fr</strong></p>
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-microsoft-teams" viewBox="0 0 16 16">
+                            <path
+                                d="M9.186 4.797a2.42 2.42 0 1 0-2.86-2.448h1.178c.929 0 1.682.753 1.682 1.682v.766Zm-4.295 7.738h2.613c.929 0 1.682-.753 1.682-1.682V5.58h2.783a.7.7 0 0 1 .682.716v4.294a4.197 4.197 0 0 1-4.093 4.293c-1.618-.04-3-.99-3.667-2.35Zm10.737-9.372a1.674 1.674 0 1 1-3.349 0 1.674 1.674 0 0 1 3.349 0Zm-2.238 9.488c-.04 0-.08 0-.12-.002a5.19 5.19 0 0 0 .381-2.07V6.306a1.692 1.692 0 0 0-.15-.725h1.792c.39 0 .707.317.707.707v3.765a2.598 2.598 0 0 1-2.598 2.598h-.013Z" />
+                            <path
+                                d="M.682 3.349h6.822c.377 0 .682.305.682.682v6.822a.682.682 0 0 1-.682.682H.682A.682.682 0 0 1 0 10.853V4.03c0-.377.305-.682.682-.682Zm5.206 2.596v-.72h-3.59v.72h1.357V9.66h.87V5.945h1.363Z" />
+                        </svg> Lien pour chat avec l'Administration de la salle : <a
+                            href="https://teams.live.com/l/invite/FEAVvMSHHb_LIb31gE">https://teams.live.com/l/invite/FEAVvMSHHb_LIb31gE</a>
+                    </p>
+                    <p>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-microsoft-teams" viewBox="0 0 16 16">
+                            <path
+                                d="M9.186 4.797a2.42 2.42 0 1 0-2.86-2.448h1.178c.929 0 1.682.753 1.682 1.682v.766Zm-4.295 7.738h2.613c.929 0 1.682-.753 1.682-1.682V5.58h2.783a.7.7 0 0 1 .682.716v4.294a4.197 4.197 0 0 1-4.093 4.293c-1.618-.04-3-.99-3.667-2.35Zm10.737-9.372a1.674 1.674 0 1 1-3.349 0 1.674 1.674 0 0 1 3.349 0Zm-2.238 9.488c-.04 0-.08 0-.12-.002a5.19 5.19 0 0 0 .381-2.07V6.306a1.692 1.692 0 0 0-.15-.725h1.792c.39 0 .707.317.707.707v3.765a2.598 2.598 0 0 1-2.598 2.598h-.013Z" />
+                            <path
+                                d="M.682 3.349h6.822c.377 0 .682.305.682.682v6.822a.682.682 0 0 1-.682.682H.682A.682.682 0 0 1 0 10.853V4.03c0-.377.305-.682.682-.682Zm5.206 2.596v-.72h-3.59v.72h1.357V9.66h.87V5.945h1.363Z" />
+                        </svg> Lien pour vidéoconférence avec l'Administration de la salle : <a
+                            href="https://teams.live.com/meet/9424220957824">https://teams.live.com/meet/9424220957824</a>
+                    </p>
                 </div>
-            </center>
-            <br><br>
+            </div>
 
-            <footer class="footer"> <!-- Création du footer -->
-                <p>Contactez-nous :</p>
-                <p>
-                    <ion-icon name="call-outline" style="margin-right: 10px;"></ion-icon>
-                    <a href="tel:0144876211">01 44 87 62 11</a>
-                </p>
-                <p>
-                    <ion-icon name="storefront-outline" style="margin-right: 10px;"></ion-icon>
-                    <a href="https://www.google.com/maps/search/?api=1&query=10+Rue+Sextius+Michel,+Paris,+France">10
-                        rue Sextius Michel, Paris</a>
-                </p>
-                <p>
-                    <ion-icon name="mail-outline" style="margin-right: 10px;"></ion-icon>
-                    <a href="mailto:salle.sports@omnessports.fr">salle.sports@omnessports.fr</a>
-                </p>
-                <br><br>
-                <!-- Insertion de la carte google maps-->
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8767.74803941555!2d2.28749683632621!3d48.84760618152228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701b4f58251b%3A0x167f5a60fb94aa76!2sECE%20-%20Ecole%20d&#39;ing%C3%A9nieurs%20-%20Engineering%20school.!5e0!3m2!1sfr!2sfr!4v1685374726975!5m2!1sfr!2sfr"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </footer>
-            <br><br><br>
-        </main>
-        <!-- Insertion des codes javascript nécessaires au bon fonctionnement de la page-->
-        <script src="recherche.js"></script>
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    </div>
+
+            <div>
+                <button class="button" onclick="window.location.href='services.html'">Nos services</button>
+            </div>
+        </center>
+        <br><br>
+
+    <!-- Footer -->
+    <footer class="footer text-center py-4">
+        <div class="container">
+            <p>Contactez-nous :</p>
+            <p>
+                <i class="fas fa-phone" style="margin-right: 10px;"></i>
+                <a href="tel:0144876211">01 44 87 62 11</a>
+            </p>
+            <p>
+                <i class="fas fa-map-marker-alt" style="margin-right: 10px;"></i>
+                <a href="https://www.google.com/maps/search/?api=1&query=10+Rue+Sextius+Michel,+Paris,+France">10 rue Sextius Michel, Paris, France</a>
+            </p>
+            <p>
+                <i class="fas fa-envelope" style="margin-right: 10px;"></i>
+                <a href="mailto:salle.sports@omnessports.fr">salle.sports@omnessports.fr</a>
+            </p>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8767.74803941555!2d2.28749683632621!3d48.84760618152228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701b4f58251b%3A0x167f5a60fb94aa76!2sECE%20-%20Ecole%20d&#39;ing%C3%A9nieurs%20-%20Engineering%20school.!5e0!3m2!1sfr!2sfr!4v1685374726975!5m2!1sfr!2sfr"
+                width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <script src="recherche.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
