--- a/connexionAdmin.html
+++ b/connexionAdmin.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -52,14 +53,14 @@
             <div class="col-md-6">
                 <h1 class="display-4 text-center">Page Administration</h1>
                 <br><br>
-                <form action="connexionCoachAdmin.php" >
+                <form action="connexionCoachAdmin.php" method="POST">
                     <div class="form-group">
-                        <label for="Email">Email</label>
-                        <input type="text" class="form-control" id="Email" placeholder="Entrez votre Email">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="email" name="email" placeholder="Entrez votre Email">
                     </div>
                     <div class="form-group">
                         <label for="password">Mot de passe</label>
-                        <input type="password" class="form-control" id="password" placeholder="Entrez votre mot de passe">
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Entrez votre mot de passe">
                     </div>
                     <div class="text-center">
                         <button type="submit" class="btn btn-primary my-2 my-sm-0">Se connecter</button>
