--- a/creerCompte.html
+++ b/creerCompte.html
@@ -56,75 +56,75 @@
                 <form action="creerCompte.php" method="POST" onsubmit="return validateForm()">
                     <div class="form-group">
                         <label for="nom">Nom</label>
-                        <input type="text" class="form-control" id="nom" name="nom" placeholder="Entrez votre nom" required>
+                        <input type="text" class="form-control" id="nom" name="nom" placeholder="Entrez votre nom" value="<?= isset($_POST['nom']) ? htmlspecialchars($_POST['nom']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="prenom">Prénom</label>
-                        <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Entrez votre prénom" required>
+                        <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Entrez votre prénom" value="<?= isset($_POST['prenom']) ? htmlspecialchars($_POST['prenom']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="adresse1">Adresse Ligne 1</label>
-                        <input type="text" class="form-control" id="adresse1" name="adresse1" placeholder="Entrez votre adresse ligne 1" required>
+                        <input type="text" class="form-control" id="adresse1" name="adresse1" placeholder="Entrez votre adresse ligne 1" value="<?= isset($_POST['adresse1']) ? htmlspecialchars($_POST['adresse1']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="adresse2">Adresse Ligne 2</label>
-                        <input type="text" class="form-control" id="adresse2" name="adresse2" placeholder="Entrez votre adresse ligne 2 (facultatif)">
+                        <input type="text" class="form-control" id="adresse2" name="adresse2" placeholder="Entrez votre adresse ligne 2 (facultatif)" value="<?= isset($_POST['adresse2']) ? htmlspecialchars($_POST['adresse2']) : '' ?>">
                     </div>
                     <div class="form-group">
                         <label for="ville">Ville</label>
-                        <input type="text" class="form-control" id="ville" name="ville" placeholder="Entrez votre ville" required>
+                        <input type="text" class="form-control" id="ville" name="ville" placeholder="Entrez votre ville" value="<?= isset($_POST['ville']) ? htmlspecialchars($_POST['ville']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="codePostal">Code Postal</label>
-                        <input type="text" class="form-control" id="codePostal" name="codePostal" placeholder="Entrez votre code postal" required>
+                        <input type="text" class="form-control" id="codePostal" name="codePostal" placeholder="Entrez votre code postal" value="<?= isset($_POST['codePostal']) ? htmlspecialchars($_POST['codePostal']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="pays">Pays</label>
-                        <input type="text" class="form-control" id="pays" name="pays" placeholder="Entrez votre pays" required>
+                        <input type="text" class="form-control" id="pays" name="pays" placeholder="Entrez votre pays" value="<?= isset($_POST['pays']) ? htmlspecialchars($_POST['pays']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="telephone">Numéro de téléphone</label>
-                        <input type="text" class="form-control" id="telephone" name="telephone" placeholder="Entrez votre numéro de téléphone" required>
+                        <input type="text" class="form-control" id="telephone" name="telephone" placeholder="Entrez votre numéro de téléphone" value="<?= isset($_POST['telephone']) ? htmlspecialchars($_POST['telephone']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Entrez votre email" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Entrez votre email" value="<?= isset($_POST['email']) ? htmlspecialchars($_POST['email']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="carteEtudiant">Carte Etudiante</label>
-                        <input type="text" class="form-control" id="carteEtudiant" name="carteEtudiant" placeholder="Entrez votre numéro de carte étudiante" required>
+                        <input type="text" class="form-control" id="carteEtudiant" name="carteEtudiant" placeholder="Entrez votre numéro de carte étudiante" value="<?= isset($_POST['carteEtudiant']) ? htmlspecialchars($_POST['carteEtudiant']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Mot de passe</label>
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Entrez votre mot de passe" required>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Entrez votre mot de passe" value="<?= isset($_POST['password']) ? htmlspecialchars($_POST['password']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="confirmPassword">Confirmez le mot de passe</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirmez votre mot de passe" required>
+                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirmez votre mot de passe" value="<?= isset($_POST['confirmPassword']) ? htmlspecialchars($_POST['confirmPassword']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="numeroCarte">Numéro de Carte</label>
-                        <input type="text" class="form-control" id="numeroCarte" name="numeroCarte" placeholder="Entrez votre numéro de carte" required>
+                        <input type="text" class="form-control" id="numeroCarte" name="numeroCarte" placeholder="Entrez votre numéro de carte" value="<?= isset($_POST['numeroCarte']) ? htmlspecialchars($_POST['numeroCarte']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="nomProprietaire">Nom du Propriétaire</label>
-                        <input type="text" class="form-control" id="nomProprietaire" name="nomProprietaire" placeholder="Entrez le nom du propriétaire de la carte" required>
+                        <input type="text" class="form-control" id="nomProprietaire" name="nomProprietaire" placeholder="Entrez le nom du propriétaire de la carte" value="<?= isset($_POST['nomProprietaire']) ? htmlspecialchars($_POST['nomProprietaire']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="dateExpiration">Date d'Expiration</label>
-                        <input type="text" class="form-control" id="dateExpiration" name="dateExpiration" placeholder="MM/AA" required>
+                        <input type="text" class="form-control" id="dateExpiration" name="dateExpiration" placeholder="MM/AA" value="<?= isset($_POST['dateExpiration']) ? htmlspecialchars($_POST['dateExpiration']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="cvv">CVV</label>
-                        <input type="text" class="form-control" id="cvv" name="cvv" placeholder="Entrez le CVV" required>
+                        <input type="text" class="form-control" id="cvv" name="cvv" placeholder="Entrez le CVV" value="<?= isset($_POST['cvv']) ? htmlspecialchars($_POST['cvv']) : '' ?>" required>
                     </div>
                     <div class="form-group">
                         <label for="typeCarte">Type de Carte</label>
                         <select class="form-control" id="typeCarte" name="typeCarte" required>
-                            <option value="Visa">Visa</option>
-                            <option value="MasterCard">MasterCard</option>
-                            <option value="American Express">American Express</option>
-                            <option value="PayPal">PayPal</option>
+                            <option value="Visa" <?= (isset($_POST['typeCarte']) && $_POST['typeCarte'] == 'Visa') ? 'selected' : '' ?>>Visa</option>
+                            <option value="MasterCard" <?= (isset($_POST['typeCarte']) && $_POST['typeCarte'] == 'MasterCard') ? 'selected' : '' ?>>MasterCard</option>
+                            <option value="American Express" <?= (isset($_POST['typeCarte']) && $_POST['typeCarte'] == 'American Express') ? 'selected' : '' ?>>American Express</option>
+                            <option value="PayPal" <?= (isset($_POST['typeCarte']) && $_POST['typeCarte'] == 'PayPal') ? 'selected' : '' ?>>PayPal</option>
                         </select>
                     </div>
                     <div class="text-center">
