--- a/accueil.html
+++ b/accueil.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="accueil.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="connexion.html">Compte</a>
+                    <a class="nav-link" href="compte.php">Compte</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="toutParcourir.html">Tout Parcourir</a>
