--- a/regles.html
+++ b/regles.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="accueil.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="connexion.html">Compte</a>
+                    <a class="nav-link" href="compte.php">Compte</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="toutParcourir.html">Tout Parcourir</a>
